added images folder

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="#" class="button">View Our Menu</a>
                 </div>
 
-                <img src="/imgs/lettuce.jpg" alt="" class="home__img">
+                <img src="imgs/lettuce.jpg" alt="" class="home__img">
             </div>
         </section>
 
