--- a/index.html
+++ b/index.html
@@ -423,6 +423,22 @@
 
 
         <!--========== CONTACT US ==========-->
+
+ <form action="auto-complete" class="form-section" id="form">
+    
+ <label for="first name ">First Name</label>
+<input type="text" id="name" name="fisrt-name" placeholder="name" required>
+<i class='bx bx-window-close'></i>
+<label for="Last Name">LastName</label>
+<input type="text" id="LastName" name="LastName" placeholder="Last Name" required>
+<br>
+<label for="email">email</label> <br>
+<input type="email" id="email" name="email" placeholder="email" required>
+
+<label for="phoneNumber">phoneNumber</label>
+<input type="text" id="phoneNumber" name="phoneNumber" placeholder="phoneNumber" required> <br>
+<input type="submit" id="submit" name="submit" value="submit" required>
+        </form>
         <section class="contact section bd-container" id="contact">
             <div class="contact__container bd-grid">
                 <div class="contact__data">
@@ -432,7 +448,7 @@
                 </div>
 
                 <div class="contact__button">
-                    <a href="#" class="button">Contact us now</a>
+                    <button class="button" onclick="formInput()">Contact us now</button>
                 </div>
             </div>
         </section>
