added dark theme and scroll animation

--- a/index.html
+++ b/index.html
@@ -424,20 +424,20 @@
 
         <!--========== CONTACT US ==========-->
 
- <form action="auto-complete" class="form-section" id="form">
-    
- <label for="first name ">First Name</label>
-<input type="text" id="name" name="fisrt-name" placeholder="name" required>
-<i class='bx bx-window-close'></i>
-<label for="Last Name">LastName</label>
-<input type="text" id="LastName" name="LastName" placeholder="Last Name" required>
-<br>
-<label for="email">email</label> <br>
-<input type="email" id="email" name="email" placeholder="email" required>
+        <form action="auto-complete" class="form-section" id="form">
 
-<label for="phoneNumber">phoneNumber</label>
-<input type="text" id="phoneNumber" name="phoneNumber" placeholder="phoneNumber" required> <br>
-<input type="submit" id="submit" name="submit" value="submit" required>
+            <label for="first name ">First Name</label>
+            <input type="text" id="name" name="fisrt-name" placeholder="name" required>
+            <i class='bx bx-window-close'></i>
+            <label for="Last Name">LastName</label>
+            <input type="text" id="LastName" name="LastName" placeholder="Last Name" required>
+            <br>
+            <label for="email">email</label> <br>
+            <input type="email" id="email" name="email" placeholder="email" required>
+
+            <label for="phoneNumber">phoneNumber</label>
+            <input type="text" id="phoneNumber" name="phoneNumber" placeholder="phoneNumber" required> <br>
+            <input type="submit" id="submit" name="submit" value="submit" required>
         </form>
         <section class="contact section bd-container" id="contact">
             <div class="contact__container bd-grid">
@@ -448,7 +448,7 @@
                 </div>
 
                 <div class="contact__button">
-                    <button class="button" onclick="formInput()">Contact us now</button>
+                    <a class="button" onclick="formInput()">Contact us now</a>
                 </div>
             </div>
         </section>
